--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -114,6 +114,7 @@
     <string name="friendsRequiresSubscription"> For å bruke denne funksjonen må du kjøpe abbonnement. </string>
     <string name="buySubscription">Kjøp abbonnement</string>
     <string name="reset">Reset</string>
+    <string name="shutdown">Skru av</string>
     <string name="bikeTracking">Sykkel Tracking</string>
     <string name="ledLight">LED Lys</string>
     <string name="active">Aktiv</string>
