--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -259,6 +259,8 @@
     <string name="imsure">Jeg er sikker</string>
     <string name="choosePhoto">Upload dit billede</string>
     <string name="buy">Købe</string>
+    <string name="addTrackerInfo">Tilføjelse af en tracker udløser et simkort abonnementsordre</string>
+    <string name="addTrackerInfoCheckBox">Jeg har læst og accepterer abonnementsbetingelserne</string>
 
     <string-array name="receiveSignalTime">
         <item>20 sekunder</item>
