--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -148,6 +148,8 @@
     <string name="imsure">Jeg er sikker</string>
     <string name="choosePhoto">Last opp bildet ditt</string>
     <string name="buy">Kjøpe</string>
+    <string name="addTrackerInfo">Når du legger til en tracker starter du et simkort abonnement til 99kr pr måned</string>
+    <string name="addTrackerInfoCheckBox">Jeg har lest og godtatt abonnements vilkårene</string>
 
     <string-array name="receiveSignalTime">
         <item>20 sekunder</item>
