[chg] link subscription terms was added

--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -261,6 +261,7 @@
     <string name="buy">Købe</string>
     <string name="addTrackerInfo">Tilføjelse af en tracker udløser et simkort abonnementsordre</string>
     <string name="addTrackerInfoCheckBox">Jeg har læst og accepterer abonnementsbetingelserne</string>
+    <string name="subscription_terms">Abonnementsbetingelser</string>
 
     <string-array name="receiveSignalTime">
         <item>20 sekunder</item>
