--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -261,6 +261,7 @@
     <string name="buy">Ostaa</string>
     <string name="addTrackerInfo">Trackerin lisääminen käynnistää SIM-kortin tilausjärjestyksen</string>
     <string name="addTrackerInfoCheckBox">Olen lukenut ja hyväksyn tilauksen ehdot</string>
+    <string name="subscription_terms">Tilauslausekkeet</string>
 
     <string-array name="receiveSignalTime">
         <item>20 sekuntia</item>
