--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -198,7 +198,7 @@
 
     <string name="emailSent">Salasanan palautuslinkki on lähetetty sähköpostiisi. Tarkista ystävällisesti sähköpostisi. </string>
 
-    <string name="forgetYourPassword"><u>Unohditko salasanasi?</u></string>
+    <string name="forgetYourPassword">Unohditko salasanasi?</string>
 
     <string name="editPoi"><u>Muokkaa kohdepistettä</u></string>
 
@@ -262,6 +262,7 @@
     <string name="addTrackerInfo">Trackerin lisääminen käynnistää SIM-kortin tilausjärjestyksen</string>
     <string name="addTrackerInfoCheckBox">Olen lukenut ja hyväksyn tilauksen ehdot</string>
     <string name="subscription_agreement">Tilaussopimus</string>
+    <string name="thisTrackerAlreadyExists">Tämä seuranta on jo olemassa</string>
 
     <string-array name="receiveSignalTime">
         <item>20 sekuntia</item>
