--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -38,6 +38,7 @@
     <string name="name">Navn</string>
     <string name="imeiNumber">IMEI Nummer</string>
     <string name="trackerNumber">Tracker Nummer</string>
+    <string name="imeiAndTrackerNumber">IMEI og tracker nummer</string>
     <string name="addTrackerButton">Legg til tracker</string>
     <string name="signal">Signal</string>
     <string name="receiveSignalEvery">Motta signal hvert</string>
@@ -194,6 +195,7 @@
     <string name="inputPhoneInProfileError">Please input phone number in settings before resetting</string>
     <string name="faq">Problem løsning</string>
     <string name="canBeFoundInside"> finner du inne i boksen til trackeren</string>
+    <string name="canBeFoundSticker">kan finnes på et klistremerke på boksens side:</string>
     <string name="helpNewTracker">Hvor finner jeg <b>trackerens mobil</b> og <b>IMEI nummer</b></string>
     <string name="isPlacedOnTheBack">er på baksiden av selve trackeren</string>
     <string name="pauseSubscription">Pause abonnement</string>
