--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -39,6 +39,7 @@
     <string name="name">Namn</string>
     <string name="imeiNumber">IMEI-nummer</string>
     <string name="trackerNumber">Nummer på GPS-spåraren </string>
+    <string name="imeiAndTrackerNumber">IMEI och tracker nummer</string>
     <string name="addTrackerButton">Lägg till GPS-spårare</string>
     <string name="signal">Signal</string>
     <string name="receiveSignalEvery">Ta emot signal varje</string>
@@ -195,6 +196,7 @@
     <string name="inputPhoneInProfileError">Please input phone number in settings before resetting</string>
     <string name="faq">Problemlösning</string>
     <string name="canBeFoundInside">hittar du inuti GPS-spårarens kartong.</string>
+    <string name="canBeFoundSticker">kan hittas på en klistermärke på kassettsidan:</string>
     <string name="helpNewTracker">Var hittar jag <b>GPS-spårarens mobil-</b> och <b>IMEI-nummer</b>?</string>
     <string name="isPlacedOnTheBack">finns på baksidan av din GPS-spårare.</string>
     <string name="pauseSubscription">Pausa prenumerationen</string>
