[chg] link to marcel in FAQ was added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,6 +185,7 @@
     <string name="addTrackerInfoCheckBox">I have read and accept the subscription conditions</string>
     <string name="subscription_agreement">Subscription agreement</string>
     <string name="thisTrackerAlreadyExists">This tracker already exists</string>
+    <string name="marcel">MARCEL</string>
 
     <string-array name="receiveSignalTime">
         <item>20 seconds</item>
