New trackers added. New commands for resetting and starting tracker implemented

--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -67,7 +67,7 @@
     <string name="satellite">Satellitt</string>
     <string name="standard">Standard</string>
     <string name="topo">Topo</string>
-    <string name="photo">Blide</string>
+    <string name="photo">Bilde</string>
     <string name="removeTracks">Fjern spor</string>
     <string name="map">Kart</string>
     <string name="all">Alle</string>
